--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
         crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3/dist/js.cookie.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- 文件icon -->
     <link rel="icon" href="./images/logo-4.svg">
     <link rel="stylesheet" href="./css/styles.css">
-
 </head>
 
 <body>
     <button id="scrollToTopBtn" onclick="scrollToTop()">Top</button>
-    <header class="p-3 text-bg-light">
+    <div class="p-3 text-bg-light">
         <div class="container">
             <div class="text-bg-light">
                 <!-- 頁首 logo -->
@@ -49,33 +50,86 @@
                         <div class="col-9 collapse navbar-collapse justify-content-center" id="offcanvasDarkNavbar">
                             <!-- 列出內容 -->
                             <ul class="navbar-nav">
-                                <li class="nav-item"><a href="#" class="nav-link px-4 mt-2 text-secondary">Home</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link px-4 mt-2 text-dark">Features</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link px-4 mt-2 text-dark">Pricing</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link px-4 mt-2 text-dark">FAQs</a></li>
-                                <li class="nav-item"></li><a href="#" class="nav-link px-4 mt-2 text-dark">About</a>
+                                <li class="nav-item"><a href="#" class="nav-link px-4 mt-2 text-secondary">首頁</a></li>
+                                <li class="nav-item"><a href="#" class="nav-link px-4 mt-2 text-dark">特色</a></li>
+                                <li class="nav-item"><a href="#" class="nav-link px-4 mt-2 text-dark">商品</a></li>
+                                <li class="nav-item"><a href="#" class="nav-link px-4 mt-2 text-dark">問與答</a></li>
+                                <li class="nav-item"></li><a href="#" class="nav-link px-4 mt-2 text-dark">關於我們</a>
                             </ul>
 
                             <br>
 
                             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 ms-auto" role="search">
                                 <input type="search" class="form-control form-control-dark text-bg-gray"
-                                    placeholder="Search..." aria-label="Search">
+                                    placeholder="搜尋..." aria-label="Search">
                             </form>
                             <div class="text-end">
-                                <button type="button" class="btn btn-outline-light btn-dark">Login</button>
-                                <button type="button" class="btn btn-warning">Sign-up</button>
+                                <button type="button" class="btn btn-outline-light btn-dark" data-bs-toggle="modal"
+                                    data-bs-target="#loginModal">登入</button>
+                                <button type="button" class="btn btn-warning">註冊</button>
                             </div>
 
+                            <!-- 登錄模態框 -->
+                            <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="loginModalLabel">請登錄</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form id="loginForm">
+                                                <div class="mb-3">
+                                                    <label for="email" class="form-label">電子郵件</label>
+                                                    <input type="email" class="form-control" id="email" required>
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="password" class="form-label">密碼</label>
+                                                    <input type="password" class="form-control" id="password" required>
+                                                </div>
+                                                <button type="submit" class="btn btn-primary">登錄</button>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
                         </div>
+
                 </nav>
 
             </div>
 
         </div>
 
-    </header>
+    </div>
     <main>
+        <!-- 購物車按鈕 -->
+        <button id="cartBtn" onclick="openCart()">
+            <i class="bi bi-cart-fill"></i>
+            <span class="badge" id="cartCount">0</span>
+        </button>
+
+        <!-- Bootstrap Offcanvas -->
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCart" aria-labelledby="offcanvasCartLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasCartLabel">購物車</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                    aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <div>
+                    <div id="cart"></div>
+
+                    <button id="checkout">結帳</button>
+
+                </div>
+            </div>
+        </div>
+
         <!-- Carousal -->
         <section aria-label="newArrival">
             <div class="carousel" data-carousel>
@@ -163,11 +217,12 @@
                             <div class="shopNav d-flex align-items-center justify-content-between">
                                 <!-- justify-content-between align-items-center -->
                                 <div class="inline-block">
-                                    找到 171,270 件 “<span class="nline-block">精選好設計 88 折</span>” 商品
+                                    找到 <span id="product-count"> </span> 件 商品
                                 </div>
+
                                 <div class="inline-block ms-auto ">排序</div>
                                 <div class="d-flex inline-block p-3">
-                                    <select class="form-select">
+                                    <select class="form-select" id="sortPrice">
                                         <option value="">熱門程度優先</option>
                                         <option value="created,desc">最新上架優先</option>
                                         <option value="price,desc">價格由高至低</option>
@@ -199,14 +254,32 @@
                                 </div>
 
                             </article> -->
-                         
+
                         </div>
                     </div>
                 </div>
 
+                <!-- 模態框 -->
+                <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="successModalLabel">成功</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                加入購物車成功！
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
-
 
         </section>
 
@@ -238,6 +311,7 @@
                     <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
                         <svg class="bi me-2" width="40" height="32">
                             <use xlink:href="#bootstrap" />
+                            <img src="./images/cLogo.svg" alt="" style="width:250px;">
 
                         </svg>
                     </a>
@@ -245,39 +319,41 @@
                 </div>
 
                 <div class="col mb-3">
-
+                   
                 </div>
 
                 <div class="col mb-3">
-                    <h5>Section</h5>
+                    <h5>認識 Artisan Haven</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">關於我們</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">媒體報導</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">ESG 永續發展</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">人才招募</a></li>
+
                     </ul>
                 </div>
 
                 <div class="col mb-3">
-                    <h5>Section</h5>
+                    <h5>幫助 / 政策</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">問與答</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">大宗採購</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">訊息公告</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">服務條款</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">會員制度 & A Coins 回饋計畫</a>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="col mb-3">
-                    <h5>Section</h5>
+                    <h5>販售</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">我想在 Artisan Haven 上販售</a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">禮物卡</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">設計誌</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">跨館合併結帳專區</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">逛櫥窗</a></li>
                     </ul>
                 </div>
             </footer>
