新稱搜索卡片功能

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                             </ul>
 
                             <br>
-
-                            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 ms-auto" role="search">
-                                <input type="search" class="form-control form-control-dark text-bg-gray"
+                            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 ms-auto" role="search"  method="GET" target="_blank">
+                                <!-- <input type="text" id="searchBox" placeholder="輸入搜尋內容" oninput="filterProducts()"> -->
+                                <input type="search" class="form-control form-control-dark text-bg-gray" id="searchBox"
                                     placeholder="搜尋..." aria-label="Search">
                             </form>
                             <div class="text-end">
@@ -282,24 +282,6 @@
 
 
         </section>
-
-
-
-
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
-        <br><br><br>
 
 
     </main>
